# gpu-llvm-optimizer

./: .gitignore  CMakeLists.txt  LICENSE  README.md
examples/: add.c  add.ll  add_opt.ll  branch.c  branch.ll  loop.c  loop.ll
src/: CMakeLists.txt  main.cpp
src/analysis/: IRAnalyzer.cpp
src/passes/: MyAnalysisPass.cpp  run_pass.cpp
